--- a/Partie6_Erreurs_et_Exceptions/Gestion des erreurs et des exceptions.ipynb
+++ b/Partie6_Erreurs_et_Exceptions/Gestion des erreurs et des exceptions.ipynb
@@ -12,20 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-1-cce31fab3614>, line 1)",
+     "evalue": "EOL while scanning string literal (<ipython-input-4-2adec1ba08e0>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-cce31fab3614>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print ('Bonjour)\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-4-2adec1ba08e0>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    print (Bonjour')\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
      ]
     }
    ],
    "source": [
-    "print ('Bonjour)"
+    "print (Bonjour')"
    ]
   },
   {
