au début du projet 2

--- a/Partie7_Deuxième_Projet/Milestone Project 2 Solution.ipynb
+++ b/Partie7_Deuxième_Projet/Milestone Project 2 Solution.ipynb
@@ -23,10 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Utilisé pour mélanger les cartes\n",
@@ -44,10 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Coeur, Carreau, Trèfle et Pique.\n",
@@ -69,10 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Création d'une classe carte\n",
@@ -104,10 +98,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Création d'une classe Main\n",
@@ -167,10 +159,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Paquet:\n",
@@ -210,10 +200,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Premier pari\n",
@@ -245,10 +233,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def distribue_cartes():\n",
@@ -297,10 +283,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def continuer():\n",
@@ -336,10 +320,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def passer():\n",
@@ -391,10 +373,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def tour_de_jeu():\n",
@@ -434,10 +414,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def sortie_jeu():\n",
@@ -454,10 +432,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def action_joueur():\n",
@@ -486,10 +462,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def intro():\n",
@@ -509,10 +483,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bienvenue au BlackJack! Essayez de vous approcher aussi près que possible de 21 sans aller plus loin !\n",
+      "     La banque enchéri jusqu'à ce qu'elle atteigne 17. Les as comptent 1 ou 11.\n",
+      "     Les cartes sont représentées par leur figure ou un numéro et leur couleur\n",
+      "Combien de jetons vous voulez parier ? (Un entier SVP) \n",
+      "2\n",
+      "\n",
+      "La main du joueur : \n",
+      "Roi de Carreau\n",
+      "8 de Pique\n",
+      "Les points de la main du joueur : 18\n",
+      "La main de la banque : \n",
+      "Valet de Coeur\n",
+      " avec une autre carte cachée posée face dessous.\n",
+      "(J)oue ou (P)asse? tapez J ou P : \n",
+      "j\n",
+      "La main du joueur est Contenu de la main  Roi de Carreau 8 de Pique 5 de Pique\n",
+      "\n",
+      "La main du joueur : \n",
+      "Roi de Carreau\n",
+      "8 de Pique\n",
+      "5 de Pique\n",
+      "Les points de la main du joueur : 23\n",
+      "La main de la banque : \n",
+      "3 de Trèfle\n",
+      "Valet de Coeur\n",
+      " --- pour un total de 13\n",
+      "Total de jetons : 98\n",
+      "Vous avez sauté !  Entrez 'd' pour donner les cartes à nouveau, ou 'q' pour quitter\n",
+      "d\n",
+      "Combien de jetons vous voulez parier ? (Un entier SVP) \n"
+     ]
+    }
+   ],
    "source": [
     "''' Ce code va lancer le jeu! (Note: Il faut avoir auparavent exécuté toutes les cellules)'''\n",
     "\n",
@@ -556,9 +565,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
